# code-jam-12

./: .gitignore  404.html  Dockerfile  LICENSE.txt  README.md  index.html  mkdocs.yaml  objects.inv  package-lock.json  package.json  pyproject.toml  server.py  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: lint.yaml  publish-docker.yaml  publish-docs.yaml
app/: index.html  js.pyi  main.py  pyscript.toml  server.py
app/calm_calatheas/: app.py
app/calm_calatheas/base/: component.py
app/calm_calatheas/components/: __init__.py  camera.py  description.py  description_test.py  footer.py  header.py  loading_caption_model.py  theme.py
app/calm_calatheas/services/: __init__.py  camera.py  description.py  description_generation.py  description_model.py  image_captioner.py  reader.py  theme.py
app/frontend/: app.py
app/frontend/base/: component.py
app/frontend/components/: __init__.py  camera.py  description.py  description_dropdown.py  footer.py  header.py  loading_caption_model.py  pokemon.py  theme.py
app/frontend/models/: pokemon_description.py
app/frontend/services/: __init__.py  camera.py  caption.py  database.py  description.py  pokemon.py  reader.py  theme.py
app/styles/: theme.css
architecture/: index.html
calm_calatheas/: model.py  settings.py
code/: index.html
code/backend/: index.html
code/frontend/: index.html
contributor-guide/: index.html
contributor-guide/development-environment/: index.html
contributor-guide/documentation/: index.html
contributor-guide/version-control/: index.html
design/: index.html
design/backend/: index.html
design/design-goals/: index.html
design/system-overview/: index.html
design/web-app/: index.html
docs/: index.md  setup-guide.md
docs/assets/design/: overview.drawio
docs/contributor-guide/: development-environment.md  documentation.md  how-to-run.md
docs/design/: index.md  web-app.md
docs/user-guide/: deployment.md
search/: search_index.json
serveur/: __init__.py  server.py
setup-guide/: index.html
tests/: conftest.py  docker-compose.yaml  test__calm_calatheas.py
typings/: js.pyi
user-guide/: index.html
