[project]
authors = [{ name = "esmecat" }, { name = "floncdev" }, { name = "leoluy" }, { name = "tfblunt" }, { name = "zike01" }]
description = "This is the project of the Calm Calatheas team for the Python Discord Code Jam 2025"
name = "calm-calatheas"
readme = "README.md"
requires-python = ">=3.13"
version = "0.0.0"

dependencies = []

[dependency-groups]
dev = [
    "mkdocs~=1.6",
    "mkdocs-material~=9.6",
    "mkdocstrings~=0.29",
    "mkdocstrings-python~=1.16",
    "pre-commit~=4.2",
    "pyright==1.1.403",
    "pytest~=8.4",
    "pytest-asyncio~=1.0",
    "pytest-sugar~=1.0",
    "python-dotenv~=1.1",
    "ruff~=0.12",
    "taskipy~=1.14",
]

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.13"
reportUnnecessaryTypeIgnoreComment = "error"
typeCheckingMode = "standard"
venvPath = "."

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
required_plugins = ["pytest-asyncio"]

[tool.ruff]
line-length = 119
target-version = "py313"

[tool.ruff.lint]
ignore = ["D100", "D104", "D105", "D212", "D107", "LOG015", "S311", "FIX002", "PT001"]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/conftest.py" = ["INP001"]
"**/test__*.py" = ["INP001", "S101", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.taskipy.tasks]
docs = "mkdocs serve"
serve = "npx nodemon -x \"python -m http.server -d ./app\" -w \"./app\" -e \"*\""
test = "pytest tests"
